<?xml version="1.0" encoding="utf-8"?>
<com.flyco.roundview.RoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    app:rv_backgroundColor="@color/white"
    app:rv_cornerRadius="30dp">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_delete"
            android:imeOptions="actionDone"
            android:textColor="@color/black_0A1629"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/iv_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/icon_48" />

    </LinearLayout>

    <TextView
        style="@style/Tv15gray"
        android:layout_marginTop="25dp"
        android:text="@string/text15"
        android:textColor="@color/_xpopup_content_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/tl_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_optional"
            android:padding="10dp"
            android:hint="Delete"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_round"
            android:maxLength="20"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.flyco.roundview.RoundTextView
        android:id="@+id/tv_confirm"
        android:layout_marginTop="35dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:rv_backgroundColor="@color/colorPrimaryDark"
        app:rv_backgroundPressColor="@color/colorPrimary"
        app:rv_cornerRadius="30dp" />

</com.flyco.roundview.RoundLinearLayout>